# claude-toolkit

./: .coderabbit.yaml  .gitignore  .pre-commit-hooks.yaml  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GUIDE.md  MAO-SETUP-GUIDE.md  QUICKSTART.md  README.md  STANDARDS.md  package.json  pyproject.toml  super_claude.py  test_claude_setup.py
.claude-plugin/: marketplace.json
.claude/agents/: mao-architect.md
.claude/commands/: mao-plan.md  mao-status.md
.claude/hooks/: pre-commit-tdd.sh
.claude/rules/: cost-discipline.md
.claude/skills/mao-plan/: SKILL.md
.claude/skills/multi-agent-orchestrator/references/: patch-protocol.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/mao-orchestrator/: action.yml
.github/workflows/: ci-mao.yml  ci-primer.yml  ci-toolkit.yml  docs.yml  release-mao.yml  release-primer.yml  release-toolkit.yml  release.yml
docs/: EVOLUTION_PLAN.md  git-worktrees.md
docs/site/: index.html  index.md  style.css
docs/site/guides/: cli-reference.html  commands.html  config.html  getting-started.html  multi-agent.html  plugins.html  templates.html  watch-mode.html
docs/site/mao/: index.html  index.md  style.css
docs/site/primer/: index.html  index.md
docs/site/primer/guides/: cli-reference.html  commands.html  config.html  getting-started.html  multi-agent.html  plugins.html  templates.html  watch-mode.html
docs/site/toolkit/: index.html  index.md
jetbrains/: build.gradle.kts
jetbrains/src/main/java/com/github/limaronaldo/claudeprimer/: DiffAction.java  GenerateAction.java
npm/: LICENSE  README.md  index.mjs  package.json
npm/tests/: properties.test.mjs
plugins/multi-agent-orchestrator/: README.md
plugins/multi-agent-orchestrator/agents/: mao-architect.md  mao-implementer.md  mao-orchestrator.md  mao-verifier.md  mao-worker.md
plugins/multi-agent-orchestrator/skills/multi-agent-orchestrator/references/: model-routing.md  self-correction.md
python/: claude_primer.py  pyproject.toml
python/tests/: bench_startup.py  test_claude_primer.py
tests/: test_super_claude.py
vscode/: package.json
