[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superclaudeai"
version = "1.2.0"
description = "Bootstrap Claude Code knowledge architecture (CLAUDE.md, STANDARDS.md, QUICKSTART.md, ERRORS_AND_LESSONS.md)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ronaldo Lima" },
    { name = "Breno Lima" },
]
keywords = ["claude", "claude-code", "documentation", "bootstrap", "ai", "knowledge-architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
]

[project.scripts]
super-claude = "super_claude:main"

[project.urls]
Homepage = "https://github.com/limaronaldo/super-claude"
Issues = "https://github.com/limaronaldo/super-claude/issues"

[tool.hatch.build.targets.sdist]
include = ["super_claude.py", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
only-include = ["super_claude.py"]

[tool.pytest.ini_options]
testpaths = ["."]
