[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-primer"
version = "1.3.4"
description = "Prime your repo for Claude Code with context-aware knowledge architecture"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ronaldo Lima" },
    { name = "Breno Lima" },
]
keywords = ["claude", "claude-code", "documentation", "bootstrap", "ai", "knowledge-architecture", "ralph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
]

[project.scripts]
claude-primer = "claude_primer:main"

[project.urls]
Homepage = "https://github.com/limaronaldo/claude-primer"
Issues = "https://github.com/limaronaldo/claude-primer/issues"

[tool.hatch.build.targets.sdist]
include = ["claude_primer.py", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
only-include = ["claude_primer.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
